# NexusFlow

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  adaptive_context_manager.py  agentos.py  base_agent.py  cognitive_division_engine.py  config.example.py  core_memory.py  cross_domain.py  dashboard.py  docker-compose.yml  dynamic_router.py  edge_cloud_scheduler.py  mcp_client.py  memory_manager.py  nexus_orchestrator.py  pyproject.toml  requirements.txt  run.py  skill_retriever.py  task_tree.py  test_skill_integration.py  tot.py  vector_memory.py
.github/workflows/: docker.yml  docs.yml  lint.yml  security.yml  tests.yml
agents/: __init__.py  archivist.py  artisan.py  assayer.py  caster.py  coordinator.py  executor.py  miner.py  planner.py  researcher.py  reviewer.py
audits/: 审计报告_v2.9.md
codeact/: index.json
codeact/scripts/: run_phase2_ablation_v3.py
config/: config.yaml  start.bat
crew/: __init__.py  agents.py  crew.py  tasks.py
dashboard/: nexusflow-dashboard-v4-ascii.html  nexusflow-dashboard-v4.html
demo/: _redirects  cdol_real_experiment.py  nexusflow_demo.py
demo/templates/: report_template.html
docs/: ARCHITECTURE.md  EXPERIMENTS.md  Nemotron3_Integration_Analysis.md  Nemotron3_集成实施方案.md  Nemotron3_集成实施方案_v2.md  NexusFlow_DBnomics_复杂任务_实验数据.xlsx  NexusFlow_DBnomics_复杂任务_实验设计.xlsx  NexusFlow_DBnomics_复杂任务设计方案.md  NexusFlow_DBnomics_复杂任务设计方案_v2.md  NexusFlow_DBnomics_表A_历史数据_1980-2020.xlsx  NexusFlow_DBnomics_表B_回测真值_2021-2025.xlsx  NexusFlow_NOAA_WorkBuddy_对比实验任务书.md  NexusFlow_NOAA_表A_历史数据_2015-2022.xlsx  NexusFlow_NOAA_表B_回测真值_2023-2024.xlsx  NexusFlow_WHO_WorkBuddy_对比实验任务书.md  NexusFlow_WHO_表A_历史数据_2000-2016.xlsx  NexusFlow_WHO_表A_历史数据_2000-2020.xlsx  NexusFlow_WHO_表B_回测真值_2017-2021.xlsx  NexusFlow_WHO_表B_回测真值_2021-2024.xlsx  NexusFlow_WorkBuddy_对比实验任务书.md  NexusFlow_v2.9_升级计划.md  NexusFlow_v2.9_审计报告.md  NexusFlow技术文档v2.3.md  NexusFlow技术文档v2.5.md  NexusFlow技术文档v2.6.md  NexusFlow技术文档v2.7.md  NexusFlow技术文档v2.8.md  NexusFlow技术文档v2.9.md  NexusFlow技术文档v3.0.md  NexusFlow技术文档v3.1.md  NexusFlow技术文档v3.2.md  NexusFlow技术文档v3.3.md  NexusFlow精华版v2.9.md  Phase1.3_尖锐答辩问题预案.md  Phase2_ablation实验报告.md  Phase7_升级方案_混合注意力启发.md  Phase7_融合方案_嵌入现有架构.md  a2a_protocol.md  api.md  architecture.md  (+8 more)
docs/iteration/: README.md
docs/reports/: cdol_real_experiment_report.md
evaluation/: __init__.py  decay_analyzer.py  metrics.py  mock_llm.py  quality_scorer.py  task_scenarios.py
examples/: P0_audit_scan_results.md  README.md  benchmark_summary.md  demo_dashboard.py  demo_dashboard_report.html  demo_e2e_pinchbench.py  demo_e2e_report.html  demo_edge_cloud.py  demo_execution_data.json  demo_full_system.py  demo_lit_review.py  demo_phase2_ablation.py  demo_phase2_ablation_v2.py  demo_phase2_ablation_v3.py  demo_real_e2e.py  edge_cloud_scheduling_experiment.py  llm_quality_scorer.py  phase2_ablation_report.html  phase2_ablation_report_v2.html  phase2_ablation_report_v3.html  phase2_ablation_results.json  phase2_ablation_results_v2.json  phase2_ablation_results_v3.json  routing_experiments.py
examples/demo/: arch-explorer.html  cdol_comparison_demo.py  hub.html  index.html  nexusflow_demo.py
examples/edge_cloud_scheduling/: edge_cloud_real_verification.py  real_machine_data.json  real_machine_report.md  scheduling_experiment_report.md  scheduling_raw_data.json
examples/honor_scenario/: honor_magicos_demo.py  honor_magicos_demo_data.json  honor_magicos_scenario_design.md
examples/horizontal_comparison/: README.md  SCORING_METHODOLOGY.md  autogen_output.md  autogen_real_output.md  comparison_report.md  comparison_results.json  complex_task_design.md  crewai_comparison.py  crewai_output.md  crewai_result.json  crewai_result.md  evaluate_real_outputs.py  evaluation_scores.md  experiment.py  generate_comparison_report.py  langgraph_comparison.py  langgraph_result.json  langgraph_result.md  llm_evaluation_results.json  llm_score_all.py  llm_score_all_v2.py  multi_framework_comparison.json  multi_framework_comparison_report.md  nexusflow_complex_output.json  nexusflow_complex_output.md  nexusflow_complex_task.py  nexusflow_output.md  nexusflow_real_comparison.py  nexusflow_real_output.md  nexusflow_real_result.json  nexusflow_real_v2_output.json  nexusflow_real_v2_output.md  nexusflow_real_v3.py  nexusflow_real_v3_output.json  nexusflow_real_v3_output.md  real_autogen_comparison.py  real_evaluation_results.json
examples/nemotron_benchmark/: bench_utils.py  e1_retrieval_quality.py  e2_latency_benchmark.py  e3_skill_retrieval.py  e4_e2e_task_quality.py  e4_resume.py  e4_v2_repo_corpus.py  e_all_v2_full_repos.py  e_all_v3_local.py  e_nemotron_materials_kb.py  report.md  run_benchmark.py
examples/noaa_climate_diagnosis/: report.md
examples/stage1_single_vs_6roles/: README.md  noaa_comparison_report.md  who_comparison_report.md
examples/stage2_6roles_vs_10roles/: README.md  comparison_report.md  noaa_ten_roles_report.md
examples/stage3_full_system/: README.md  benchmark_runner.py  noaa_ten_roles_report.md  stage3_full_system.py  (+2 more)
gateway/: __init__.py
iteration/: CHANGELOG.md
nexusflow/: __init__.py  __main__.py  cli.py
scripts/: manage-local.ps1  test_od_mcp.py
server/: __init__.py  dashboard.py  nexusflow_server.py  nexusflow_server_ascii.py
tests/: conftest.py  test_adaptive_context_manager.py  test_agent_information_policy.py  test_base_agent.py  test_cli.py  test_cognitive_division_engine.py  test_dynamic_router.py  test_guardrails.py  test_integration.py  test_mixins.py  test_nexus_orchestrator.py  test_quality.py  test_skill_integration.py
tools/: api_caller.py  data_query.py  data_validator.py  file_ops.py  literature_search.py  od_design_tool.py  report_generator.py  tool_registry.py  web_search.py
(+507 files in other folders)
