[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusflow"
version = "3.0.0"
description = "NexusFlow — 面向超长程复杂任务的群体智能引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "aiohttp>=3.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "gradio>=4.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0",
    "litellm>=1.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/tsingxuanhan/NexusFlow"
Issues = "https://github.com/tsingxuanhan/NexusFlow/issues"

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
include = ["nexusflow*", "server*", "tools*", "evaluation*"]
